[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scripts/KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Hero Skeleton/Attack 5/Separate sp/attack 5 (5).png" type="Texture" id=2]
[ext_resource path="res://Animation/Player/Player_Attack.tres" type="Animation" id=3]
[ext_resource path="res://Animation/Player/Death.tres" type="Animation" id=4]
[ext_resource path="res://Animation/Player/Falling.tres" type="Animation" id=5]
[ext_resource path="res://Animation/Player/Idle.tres" type="Animation" id=6]
[ext_resource path="res://Animation/Player/Jump.tres" type="Animation" id=7]
[ext_resource path="res://Animation/Player/Player_Jump.tres" type="Animation" id=8]
[ext_resource path="res://Animation/Player/Run.tres" type="Animation" id=9]
[ext_resource path="res://Scripts/Pause.gd" type="Script" id=10]
[ext_resource path="res://Scripts/DeathMenu.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.9004, 44.9558 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 89.2297, 182.712 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=10]
size = 64
font_data = SubResource( 9 )

[sub_resource type="DynamicFontData" id=11]
font_path = "res://Fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=12]
size = 32
font_data = SubResource( 11 )

[sub_resource type="DynamicFontData" id=13]
font_path = "res://Fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=14]
size = 32
font_data = SubResource( 13 )

[sub_resource type="DynamicFontData" id=15]
font_path = "res://Fonts/Xolonium-Regular.ttf"

[sub_resource type="DynamicFont" id=16]
size = 32
font_data = SubResource( 15 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.4, 0.4 )
collision_layer = 557056
collision_mask = 557057
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="anim" type="AnimationPlayer" parent="Sprite"]
anims/Attack = ExtResource( 3 )
anims/Death = ExtResource( 4 )
anims/Falling = ExtResource( 5 )
anims/Idle = ExtResource( 6 )
anims/Jump = ExtResource( 7 )
anims/Player_Jump = ExtResource( 8 )
anims/Run = ExtResource( 9 )

[node name="RigidBody2D" type="RigidBody2D" parent="Sprite"]
visible = false
collision_layer = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Sprite/RigidBody2D"]
position = Vector2( 95, -38 )
scale = Vector2( 10, 1 )
shape = SubResource( 1 )

[node name="AttackArea" type="Area2D" parent="Sprite"]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/AttackArea"]
position = Vector2( 95, -38 )
scale = Vector2( 10, 1 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -9.67224, -1.93445 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.25, 1.25 )

[node name="RayCasts" type="Node2D" parent="."]
editor/display_folded = true

[node name="RayCast2D" type="RayCast2D" parent="RayCasts"]
position = Vector2( 78, 180 )
enabled = true
cast_to = Vector2( 0, 16 )

[node name="RayCast2D2" type="RayCast2D" parent="RayCasts"]
position = Vector2( -97, 180 )
enabled = true
cast_to = Vector2( 0, 16 )

[node name="RayCast2D3" type="RayCast2D" parent="RayCasts"]
position = Vector2( -7, 180 )
enabled = true
cast_to = Vector2( 0, 16 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="HP" type="Label" parent="HUD"]
margin_left = 31.912
margin_top = 10.9707
margin_right = 254.912
margin_bottom = 72.9707
custom_fonts/font = SubResource( 4 )

[node name="SCORE" type="Label" parent="HUD"]
margin_left = 793.365
margin_top = 19.2726
margin_right = 954.365
margin_bottom = 78.2726
custom_fonts/font = SubResource( 6 )

[node name="Pause" type="ColorRect" parent="HUD"]
pause_mode = 2
visible = false
self_modulate = Color( 0.0117647, 0.0705882, 0.164706, 0.282353 )
margin_left = 312.0
margin_top = 92.0
margin_right = 692.0
margin_bottom = 472.0
script = ExtResource( 10 )

[node name="Resume" type="Button" parent="HUD/Pause"]
margin_left = 77.9495
margin_top = 114.604
margin_right = 297.949
margin_bottom = 159.604
custom_fonts/font = SubResource( 8 )
text = "Continue"

[node name="Menu" type="Button" parent="HUD/Pause"]
margin_left = 77.9495
margin_top = 207.481
margin_right = 297.949
margin_bottom = 252.481
custom_fonts/font = SubResource( 8 )
text = "Main menu"

[node name="Exit" type="Button" parent="HUD/Pause"]
margin_left = 77.9495
margin_top = 290.758
margin_right = 297.949
margin_bottom = 335.758
custom_fonts/font = SubResource( 8 )
text = "Exit"

[node name="Label" type="Label" parent="HUD/Pause"]
modulate = Color( 1, 1, 1, 0.756863 )
margin_left = 40.0
margin_top = 10.0
margin_right = 340.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 10 )
text = "PAUSED"

[node name="DeathMenu" type="ColorRect" parent="HUD"]
visible = false
self_modulate = Color( 0.0117647, 0.0666667, 0.192157, 0.160784 )
margin_left = 310.947
margin_top = 93.0526
margin_right = 690.947
margin_bottom = 473.053
script = ExtResource( 11 )

[node name="Label" type="Label" parent="HUD/DeathMenu"]
modulate = Color( 1, 1, 1, 0.756863 )
margin_left = 11.3703
margin_top = 6.90491
margin_right = 372.37
margin_bottom = 84.9049
custom_fonts/font = SubResource( 10 )
text = "Game over"

[node name="Label2" type="Label" parent="HUD/DeathMenu"]
margin_left = 30.1579
margin_top = 115.0
margin_right = 221.158
margin_bottom = 156.0
custom_fonts/font = SubResource( 12 )
text = "Your score:"

[node name="Score" type="Label" parent="HUD/DeathMenu"]
margin_left = 230.525
margin_top = 115.0
margin_right = 368.525
margin_bottom = 154.0
custom_fonts/font = SubResource( 14 )
text = "4156"

[node name="Okay" type="Button" parent="HUD/DeathMenu"]
margin_left = 74.7916
margin_top = 295.655
margin_right = 294.791
margin_bottom = 340.655
custom_fonts/font = SubResource( 8 )
text = "Okay"

[node name="Name" type="LineEdit" parent="HUD/DeathMenu"]
margin_left = 43.0
margin_top = 203.0
margin_right = 343.0
margin_bottom = 252.0
custom_fonts/font = SubResource( 16 )
text = "Enter your name"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="body_entered" from="Sprite/RigidBody2D" to="." method="_on_RigidBody2D_body_entered"]
[connection signal="body_entered" from="Sprite/AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="pressed" from="HUD/Pause/Resume" to="HUD/Pause" method="_on_Resume_pressed"]
[connection signal="pressed" from="HUD/Pause/Menu" to="HUD/Pause" method="_on_Menu_pressed"]
[connection signal="pressed" from="HUD/Pause/Exit" to="HUD/Pause" method="_on_Exit_pressed"]
[connection signal="pressed" from="HUD/DeathMenu/Okay" to="HUD/DeathMenu" method="_on_Okay_pressed"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
